[package]
name = "swoirenberg"
version = "0.36.0-1" # This version should align with Noir
authors = ["Bartosz Nowak", "Michael Elliot", "Theo Madzou"]
repository = "https://github.com/Swoir/Swoirenberg.git"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = "0.1"
sha2 = "0.10.8"
regex = "1.10.2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swift-bridge = "0.1"
noir_rs = { git = "https://github.com/zkpassport/noir_rs.git", branch = "v0.36.0", package = "noir_rs" }

[profile.release]
strip = "symbols"
lto = true
